Sat, 10 May 2008 13:24:19 +0200 <thp@perli.net>
Don't change the menu item text for subscription remove and edit

	* src/gpodder/gui.py: Don't change the text of the subscription menu
	items when changing the active channel

Sat, 10 May 2008 12:37:06 +0200 <thp@perli.net>
Show correct icon on Maemo for gPodder

	* data/maemo/gpodder.desktop: Add Portuguese translation to Maemo's
	.desktop file; add StartupWMClass=gpodder to the .desktop file for
	Maemo, so the window manager on Maemo shows the correct icon when
	gPodder is running instead of the "generic" application icon

Mon, 05 May 2008 15:55:02 +0200 <thp@perli.net>
Add bug reporter for previous bug to list of contributors

	* src/gpodder/gui.py: Add Jerry Moss to list of bug reporters

Mon, 05 May 2008 15:52:49 +0200 <thp@perli.net>
Make sure we have a valid channel on which to call get_new_episodes()

	* src/gpodder/gui.py: Refactor on_btnDownloadNewer_clicked into the
	single calling code and remove the callback; this should really fix
	the problem described in LP bug 217113
	(Closes: https://bugs.launchpad.net/ubuntu/+source/gpodder/+bug/217113)

Fri, 02 May 2008 17:42:54 +0200 <thp@perli.net>
Maemo-related changes; allow custom player on Maemo (optional)

	* data/gpodder.glade: gPodder maemo preferences window should be
	modal; Add "Ask before closing gPodder" checkbox to Maemo preferences
	* src/gpodder/config.py: Add option "maemo_allow_custom_player" that
	allows setting the "player" and "videoplayer" variables to a command
	that will be called, like on the Desktop version (instead of always
	opening Nokia's Media Player with all files)
	* src/gpodder/gui.py: Maemo-specific UI tweaks
	* src/gpodder/libgpodder.py: Only call Nokia's Mediaplayer when we are
	on Maemo and when "maemo_allow_custom_player" is set to False

Fri, 02 May 2008 17:28:22 +0200 <thp@perli.net>
Change "Channel" to "Podcast"; new main menu; URL entry updated; +niceties
