@@ -4,7 +4,7 @@
 <glade-interface>
 
 <widget class="GtkWindow" id="gPodder">
-  <property name="visible">True</property>
+  <property name="visible">False</property>
   <property name="title">gPodder</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_CENTER</property>
